Bug 159285 - LAYOUT floating table: 2007 DOCX hangs trying to open
Summary: LAYOUT floating table: 2007 DOCX hangs trying to open
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2024-01-19 10:28 UTC by Justin L
Modified: 2024-02-20 18:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2024-01-19 10:28:15 UTC
When trying to open attachment 185680 [details] (Networking Practice VoIP - Enterprise Elite Services Datasheet.docx from bug  153909), it just started to hang and never display anything in 24.2, starting with
commit 868140fcc1311259b9d5f666637b33d226511a53
Author: Miklos Vajna on Tue Dec 5 08:39:10 2023 +0100
    tdf#60558 sw floattable: allow wrap of table on the right of a floattable
Comment 1 Timur 2024-01-24 14:08:58 UTC
I confirm. 
This is only for original 2007 DOCX, MSO saved attachment 185695 [details] opens OK.
Comment 2 Miklos Vajna 2024-02-13 16:05:40 UTC
Let me see.
Comment 3 Commit Notification 2024-02-20 08:37:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2da4acdbf8c5a8ba3ef51e5f5dc3439716e71a91

tdf#159285 sw floattable: fix loop with inner table wrapped by inner table

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-02-20 18:13:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/287d13d643bb98416baaf52179c1b32e70f2d269

tdf#159285 sw floattable: fix loop with inner table wrapped by inner table

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.