tdf#159285 sw floattable: fix loop with inner table wrapped by inner table

Regression from 868140fcc1311259b9d5f666637b33d226511a53 (tdf#60558 sw
floattable: allow wrap of table on the right of a floattable,
2023-12-05), the bugdoc layout looped on load.

Somehow the big while() loop in SwTabFrame::MakeAll() never finishes: it
always tries again but can't reach a state where all of frame area
position, frame area size and frame print area is valid.

Fix the problem by going back to the old behavior (floating table is
wrapped by text frames, not by table frames) for the nested table case:
that keeps the old tdf#60558 use-case working and fixes the new
tdf#159285 use-case.

At some point it would be useful to support the combination of nested
floating tables and the "floating table wrapped by table" combination,
but that will be a new layout feature.

Conflicts:
	sw/source/core/layout/tabfrm.cxx

Change-Id: Ia3fdbd08de87e13ddef086ae1339e79a8833674d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163630
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 2da4acdbf8c5a8ba3ef51e5f5dc3439716e71a91)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163612
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 287d13d643bb98416baaf52179c1b32e70f2d269)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164073
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>